--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="fansite.css">
-      <title>Your Fansite Name here</title>
+      <title>TailSpinning</title>
     </head>
     <body>
-      <div id="welcome">Have fun making your Fansite!</div>
+      <Header><img src="Tailspin.jpeg" alt="Tailspin"></Header>
+      <div>
+        <h1>Tails Spin</h1>
+        <p>Tailspin is action adventure animated series about a bear, Named Baloo Von Bruinwald XIII who is a cargo pilot 
+          flying throughout the fictional town of Cape Suzette in the 1930s. 
+          Along his journey as a contract pilot he faces many different characters to include sky pirates, 
+          a rich and evil arch nemesis, and other perilous challenges, below you will find a list of characters </p>
+        </div>
+        <div>
+           <ul>
+                <li><a href=https://talespin.fandom.com/wiki/Baloo>Baloo von Bruinwald XIII</a></li>
+                <li><a href=https://talespin.fandom.com/wiki/Rebecca_Cunningham>Rebaecca Cunningham</a> </li>
+                <li><a href=https://talespin.fandom.com/wiki/Kit_Cloudkicker>Kit Cloudkicker</a> </li>
+                <li><a href=https://talespin.fandom.com/wiki/Don_Karnage>Don Karnage</a></li>
+                <li><a href=https://talespin.fandom.com/wiki/Shere_Khan>Shere Khan</a></li>
+              </ul>
+    
+        </div>
+        <div>
+          <h2>Fun facts</h2>
+          <p> It features characters adapted from Disney's 1967 animated feature the Jungle Book </p><br>
+          <p> It aired on the Disney Channel On September 7th, 1990 and ended on its 65th episode on August 8th, 1991</P><br>
+    
+          <p>The show had three different TalesSpin Video Games for the Gameboy, Sega Genesis, and Nintendo Entertainment System</p>
+        </div>
+        <div>
+          <h2>Where Dreams come from</h2>
+          <p> My name is Eugene Washington, I am watched Talespin as much as I could when I was younger and thoroughly enjoyed the show, so much so that 30 years after its airing I still watch it on Disney+ with my son today. Today aside from being a web developer and father, I am also a pilot. I want to credit Talespin for the inspiration it gave me at such a young age. To many it is just a cartoon but I can honestly say (with no credit taken away from my parents) that a cartoon gave me some very early direction, because of a group of bears flying seaplanes around mountains, dodging crazy weather, fighting sky pirates, racing robot pilots and other crazy villainous animals it gave me a dream and something to stick to. 30 years later I am here catching a tailwind because TailSpin!   </p>
+        </div>
+      </div>
     </body>
   </html>
