--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <title>TailSpinning</title>
     </head>
     <body>
-      <Header><img src="Tailspin.jpeg" alt="Tailspin"></Header>
+      <Header><img src="./images/Tailspin.jpeg" alt="Tailspin"></Header>
       <div>
         <h1>Tails Spin</h1>
         <p>Tailspin is action adventure animated series about a bear, Named Baloo Von Bruinwald XIII who is a cargo pilot 
